fix: resolvido e agora os options do select são dinâmicos

--- a/exercicio-tres/index.html
+++ b/exercicio-tres/index.html
@@ -17,16 +17,12 @@
         <h2>Visualizador de informações específicas</h2>
         <h4>Primeiro selecione o ID de quem você quer visualizar, após isso, selecione se você quer visualizar o nome ou a biografia</h3>
         <div>
-            <label for="">ID
-            <select name="" id="idOptions">
-            <option value="1" selected>1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
+            <label>ID
+            </label>
+            <select id="idOptions">
             </select>
             <label>Nome <input type="radio" id="name" name="getInfoById" value="name"/></label>
             <label>Biografia<input type="radio" id="bio" name="getInfoById" value="bio"/></label>
-            </label>
             <button id="button-getBioOrName">Clique e visualize</button>
         </div>
         <textarea name="" id="textarea-getBioOrName" cols="30" rows="10"></textarea>
@@ -35,10 +31,6 @@
         <h2>Selecione um ID e remova um item da tabela baseado no ID</h2>
         <label for="">ID
             <select name="" id="idOptionsRemove">
-            <option value="1" selected>1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
             </select>
         <button id="removeItemButton">Clique e remova</button>
     </div>
@@ -48,10 +40,6 @@
             <div>
                 <label for="">ID
                 <select name="" id="idChangeOptions">
-                <option value="1" selected>1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
                 </select>
                 <label>Nome <input type="radio" id="nameChange" name="getInfoById" value="name"/></label>
                 <label>Biografia<input type="radio" id="bioChange" name="getInfoById" value="bio"/></label>
